# slam_in_autonomous_driving

./: .gitignore  .vimspector.json  CMakeLists.txt
cmake/: packages.cmake
config/: mapping.yaml
dataset/: sad
scripts/: all_path.py  plot_loop.py
src/: CMakeLists.txt
src/ch10/: fusion.cc  fusion.h  run_fusion_offline.cc
src/ch2/: motion.cc
src/ch3/: eskf.hpp  imu_integration.h  process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc  static_imu_init.cc  static_imu_init.h  utm_convert.cc  utm_convert.h
src/ch4/: CMakeLists.txt  g2o_types.cc  g2o_types.h  gins_pre_integ.cc  gins_pre_integ.h  imu_preintegration.cc  imu_preintegration.h  run_gins_pre_integ.cc  test_preintegration.cc
src/ch5/: CMakeLists.txt  bfnn.cc  bfnn.h  gridnn.hpp  kdtree.cc  kdtree.h  linear_fitting.cc  nanoflann.hpp  octo_tree.cc  octo_tree.h  pcd_to_bird_eye.cc  point_cloud_load_and_vis.cc  scan_to_range_image.cc  test_nn.cc
src/ch6/: CMakeLists.txt  DBSCAN_kdtree.h  DBSCAN_simple.h  frame.cc  frame.h  g2o_types.h  icp_2d.cc  icp_2d.h  lidar_2d_utils.cc  lidar_2d_utils.h  likelihood_field.cc  likelihood_filed.h  loop_closing.cc  loop_closing.h  mapping_2d.cc  mapping_2d.h  multi_resolution_likelihood_field.cc  multi_resolution_likelihood_field.h  occupancy_map.cc  occupancy_map.h  submap.cc  submap.h  test_2d_degradation_detection.cc  (+6 more)
src/ch8/: CMakeLists.txt
src/ch8/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
src/ch8/lio-iekf/: iekf.hpp  lio_iekf.cc  lio_iekf.h
src/ch8/lio-preinteg/: lio_preinteg.cc  lio_preinteg.h
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
(+78 files in other folders)
